# issue-autopilot

./: Dockerfile  Makefile  README.md  config.py  demo_agent.py  docker-compose.yml  env.example  main.py  pyproject.toml  quick_start.py  requirements.txt  test_basic_functionality.py
api/: routes.py  webhook_handler.py
core/: issue_processor.py
examples/: example_issue.json
models/: github.py
scripts/: process_existing_issues.py  setup_webhook.py
services/: ai_service.py  github_service.py  vector_service.py
tests/: test_ai_service.py
